tests/eta-horror.m31
(* Simple products with an eta rule. *)

constant prod : forall (_ _ : Type), Type

constant Pair : forall (A : Type) (B : Type) (_ : A) (_ : B), prod A B

constant Fst : forall (X Y : Type) (_ : prod X Y), X
constant Snd : forall (X Y : Type) (_ : prod X Y), Y

now reducing = add_reducing Fst [lazy,lazy,eager] reducing
now reducing = add_reducing Snd [lazy,lazy,eager] reducing

constant Pair_beta_Fst :
  Π (U V : Type) (u : U) (v : V),
    (Fst V U (Pair V U v u)) == v

constant Pair_beta_Snd :
  Π (U V : Type) (u : U) (v : V),
    (Snd V U (Pair V U v u)) == u

constant Pair_eta :
  Π (U V : Type) (x y : prod U V),
    Fst U V x == Fst U V y ->
    Snd U V x == Snd U V y ->
    x == y

constant C : Type
constant D : Type
constant p : prod C D
constant q : prod C D

do
  now betas = add_betas [Pair_beta_Fst, Pair_beta_Snd] betas in
  now etas = add_eta Pair_eta etas in
    refl p : p == q

